--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/jquery.min.js"></script>
-    <title>SeatSavor</title>
+    <title>Seat.n.Savor</title>
   </head>
   <body>
     <div id="app"></div>
