Optimize jQuery inside Vue
- Remove jQuery <script> source
- Import jQuery from node_modules to Vue components
- Remove ResponsiveSlides and replace with v-carousel of vuetify
- Add Supreme font as a class
- Rename `Seat.n.Savor` to `Seat.N.Savor`

--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/jquery.min.js"></script>
-    <title>Seat.n.Savor</title>
+    <title>Seat.N.Savor</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="/js/responsiveslides.min.js"></script>
   </body>
 </html>
